versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
= Create Kubernetes Persistent Volumes and Storage Classes
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/index.adoc 
:product-path: cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
:description: Learn about the two ways with which you can create persistent storage in Kubernetes: persistent volumes and storage classes
ifeval::["{build-type}" != "community"]
:url-storage-overview: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/longhorn-documentation.html
:url-storage-introduction: https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/introduction/introduction.html
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-longhorn: xref:integrations/longhorn/longhorn.adoc
:xref-set-up-cloud-providers: xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
:xref-cloud-provider-vsphere-out-of-tree: xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc
:xref-vsphere-storage-example: xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc
:xref-existing-storage-setup: xref:cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
:xref-amazon-ebs-storage: xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc
:xref-nfs-storage: xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc
:xref-about-persistent-storage: xref:cluster-admin/manage-clusters/persistent-storage/about-persistent-storage.adoc
:xref-dynamically-provision-new-storage: xref:cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
:xref-glusterfs-storage: xref:cluster-admin/manage-clusters/persistent-storage/about-glusterfs-volumes.adoc
:xref-iscsi-storage: xref:cluster-admin/manage-clusters/persistent-storage/install-iscsi-volumes.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-storage-overview: https://longhorn.io/docs/{longhorn-docs-version}/what-is-longhorn/
:url-storage-introduction: https://longhorn.io/docs/{longhorn-docs-version}/what-is-longhorn/
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-longhorn: xref:integrations-in-rancher/longhorn/index.adoc
:xref-set-up-cloud-providers: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/index.adoc
:xref-cloud-provider-vsphere-out-of-tree: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc
:xref-vsphere-storage-example: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/vsphere-storage.adoc
:xref-existing-storage-setup: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/set-up-existing-storage.adoc
:xref-amazon-ebs-storage: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/persistent-storage-in-amazon-ebs.adoc
:xref-nfs-storage: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/nfs-storage.adoc
:xref-about-persistent-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/about-persistent-storage.adoc
:xref-dynamically-provision-new-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/dynamically-provision-new-storage.adoc
:xref-glusterfs-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/about-glusterfs-volumes.adoc
:xref-iscsi-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/install-iscsi-volumes.adoc
endif::[]

When deploying an application that needs to retain data, you'll need to create persistent storage. Persistent storage allows you to store application data external from the pod running your application. This storage practice allows you to maintain application data, even if the application's pod fails.

The documents in this section assume that you understand the Kubernetes concepts of persistent volumes, persistent volume claims, and storage classes. For more information, refer to the section on {xref-about-persistent-storage}[how storage works.]

== Prerequisites

To set up persistent storage, the `Manage Volumes` {xref-cluster-project-roles}#_project_role_reference[role] is required.

If you are provisioning storage for a cluster hosted in the cloud, the storage and cluster hosts must have the same cloud provider.

For provisioning new storage with Rancher, the cloud provider must be enabled. For details on enabling cloud providers, refer to {xref-set-up-cloud-providers}[this page.]

For attaching existing persistent storage to a cluster, the cloud provider does not need to be enabled.

== Setting up Existing Storage

The overall workflow for setting up existing storage is as follows:

. Set up your persistent storage. This may be storage in an infrastructure provider, or it could be your own storage.
. Add a persistent volume (PV) that refers to the persistent storage.
. Add a persistent volume claim (PVC) that refers to the PV.
. Mount the PVC as a volume in your workload.

For details and prerequisites, refer to {xref-existing-storage-setup}[this page.]

== Dynamically Provisioning New Storage in Rancher

The overall workflow for provisioning new storage is as follows:

. Add a StorageClass and configure it to use your storage provider. The StorageClass could refer to storage in an infrastructure provider, or it could refer to your own storage.
. Add a persistent volume claim (PVC) that refers to the storage class.
. Mount the PVC as a volume for your workload.

For details and prerequisites, refer to {xref-dynamically-provision-new-storage}[this page.]

== {longhorn-product-name} Storage

{url-storage-overview}[{longhorn-product-name}] is a lightweight, reliable and easy-to-use distributed block storage system for Kubernetes.

Longhorn is free, open source software. Originally developed by Rancher Labs, it is now being developed as a sandbox project of the Cloud Native Computing Foundation. It can be installed on any Kubernetes cluster with Helm, with kubectl, or with the Rancher UI.

If you have a pool of block storage, Longhorn can help you provide persistent storage to your Kubernetes cluster without relying on cloud providers. For more information about Longhorn features, refer to the {url-storage-introduction}[documentation.]

Rancher v2.5 simplified the process of installing Longhorn on a Rancher-managed cluster. For more information, see {xref-longhorn}[Cloud Native Storage with Longhorn].

== Provisioning Storage Examples

We provide examples of how to provision storage with {xref-nfs-storage}[NFS,] {xref-vsphere-storage-example}[vSphere,] and {xref-amazon-ebs-storage}[Amazon's EBS.]

== GlusterFS Volumes

In clusters that store data on GlusterFS volumes, you may experience an issue where pods fail to mount volumes after restarting the `kubelet`. For details on preventing this from happening, refer to {xref-glusterfs-storage}[this page.]

== iSCSI Volumes

In {xref-launch-k8s-with-rancher}[Rancher Launched Kubernetes clusters] that store data on iSCSI volumes, you may experience an issue where kubelets fail to automatically connect with iSCSI volumes. For details on resolving this issue, refer to {xref-iscsi-storage}[this page.]

== hostPath Volumes

Before you create a hostPath volume, you need to set up an https://rancher.com/docs/rke/latest/en/config-options/services/services-extras/#extra-binds/[extra_bind] in your cluster configuration. This will mount the path as a volume in your kubelets, which can then be used for hostPath volumes in your workloads.

== Migrating VMware vSphere Cloud Provider from In-tree to Out-of-tree

Kubernetes is moving away from maintaining cloud providers in-tree. vSphere has an out-of-tree cloud provider that can be used by installing the vSphere cloud provider and cloud storage plugins.

For instructions on how to migrate from the in-tree vSphere cloud provider to out-of-tree, and manage the existing VMs post migration, refer to {xref-cloud-provider-vsphere-out-of-tree}[this page.]

== Related Links

* https://kubernetes.io/docs/concepts/storage/[Kubernetes Documentation: Storage]
